PROJECT(conan-hello)
cmake_minimum_required(VERSION 2.8)

SET(EXPORTS ${CMAKE_CURRENT_SOURCE_DIR}/../exports)
set(CMAKE_DEBUG_POSTFIX _d)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${EXPORTS}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${EXPORTS}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${EXPORTS}/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${EXPORTS}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

ADD_LIBRARY(hello STATIC hello.cpp)

ADD_EXECUTABLE(greet main.cpp)
set_target_properties(greet PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
TARGET_LINK_LIBRARIES(greet hello)
IF (WIN32 AND "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	TARGET_LINK_LIBRARIES(greet stdc++)
ENDIF()